--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   dartz: ^0.10.1
-  intl: ^0.19.0
+  intl: 0.20.2
   fluttertoast: ^8.2.12
 
 dev_dependencies:
@@ -91,13 +91,11 @@ flutter:
       fonts:
         - asset: assets/fonts/Ubuntu/Ubuntu-Bold.ttf
           weight: 700
-
         - asset: assets/fonts/Ubuntu/Ubuntu-Regular.ttf
           weight: 400
         - asset: assets/fonts/Ubuntu/Ubuntu-Medium.ttf
           weight: 500
-        - asset: fonts/Schyler-Italic.ttf
-          style: italic
+        
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
