--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   dartz: ^0.10.1
   intl: 0.20.2
   fluttertoast: ^8.2.12
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
